[package]
name = "fruitopian_defender"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
rand_derive2 = "0.1"
rand = "0.8"
strum = { version = "0.20", features = ["derive"] }
rand_distr = "0.4"
