[package]
name = "fruitopian_defender"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#engine = { path = "../engine" }
eframe = "0.12"
rand_derive2 = "0.1"
rand = "0.8"
strum = { version = "0.20", features = ["derive"] }
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
#web-sys = { version = "0.3", features = ["console"]}
js-sys = "0.3"
derive_more = "0.99"
retain_mut = "0.1"
